# project_movies

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.yml  movies_database.sql  requirements.txt
ETL/: Dockerfile  backoff.py  const.py  db.py  main.py  requirements.txt  state_manager.py
ETL/etl_components/: __init__.py  elastic_loader.py  postgres_enricher.py  postgres_merger.py  postgres_producer.py  transformer.py
admin_panel_movies/: Dockerfile  entrypoint.sh  pyproject.toml
admin_panel_movies/config/: settings.py  urls.py
admin_panel_movies/config/components/: apps.py  common.py  database.py
admin_panel_movies/movies/: admin.py
admin_panel_movies/movies/locale/en/LC_MESSAGES/: django.po
admin_panel_movies/movies/locale/ru/LC_MESSAGES/: django.po
admin_panel_movies/movies/models/: __init__.py  film_work.py  genre.py  mixins.py  person.py
admin_panel_movies/uwsgi/: uwsgi.ini
env/: .env.db  .env.django  .env.elastic  .env.etl  .env.ngx
init/: .env_example  docker-compose.init.yml
init/elasticsearch/: Dockerfile  default_mapping.json  init_elasticsearch.py
init/init_db_etl/: Dockerfile  data_classes.py  db_engine.py  main.py  utils.py  wait-for-postgres.sh
init_db_etl/: Dockerfile  data_classes.py  db_engine.py  requirements.txt  wait-for-postgres.sh
movies_async_api/: Dockerfile
movies_async_api/src/: main.py
movies_async_api/src/core/: config.py  logger.py
movies_async_api/src/db/: elastic.py  redis.py
movies_async_api/src/models/: film.py  (+2 more)
nginx/: nginx.conf
nginx/conf.d/: site.conf
(+2 files in other folders)
