[project]
name = "movies"
version = "0.1.0"
description = ""
authors = [
    {name = "KirillDomitin",email = "domitin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

